[tool.poetry]
name = "foodrecipeapi"
version = "0.1.0"
description = ""
authors = ["Edward Turner <edward.turner@pyscale.net>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic-sqlalchemy = "^0.0.9"
fastapi = "^0.78.0"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.37"}
psycopg2 = "^2.9.3"
psycopg = "^3.0.14"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
starlette-exporter = "^0.13.0"
graphql-relay = "2.0.1"
graphene-sqlalchemy = "^2.3.0"
graphene-sqlalchemy-filter = "^1.13.0"
SQLAlchemy-bulk-lazy-loader = "^0.10.0"
asyncpg = "^0.26.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-postgresql = "^4.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
